Update contents.sh